--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,12 +1,12 @@
-- name: "orcid"
+- name: "ORCiD"
   url: "https://orcid.org/0000-0003-3019-4902"
   icon: "ai ai-orcid"
 
-- name: "hal"
+- name: "HAL"
   url: "https://hal.archives-ouvertes.fr/search/index/?q=jaime+arias&authIdHal_s=jaime-arias"
   icon: "ai ai-hal"
 
-- name: "scholar"
+- name: "Google Scholar"
   url: "https://scholar.google.com.co/citations?user=r7ZbWJYAAAAJ"
   icon: "ai ai-google-scholar"
 
