--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Jaime Arias
 email: arias@lipn.univ-paris13.fr
-description: My personal website
+description: CNRS Research Engineer
 timezone: Europe/Paris
 encoding: utf-8
 baseurl: ""
