--- a/_data/service.yml
+++ b/_data/service.yml
@@ -1,3 +1,11 @@
+- title: "Organization"
+  events:
+    - title: Journée Modèles Formels pour les réseaux sociaux
+      acronym: Promueva
+      year: 2023
+    - title: 9th International Workshop on Synthesis of Complex Parameters
+      acronym: SynCoP2024
+      year: 2024
 - title: "Programme Committee Member"
   events:
     - title: 23rd International Conference on Autonomous Agents and Multi-Agent Systems)
