--- a/_data/responsibilities.yml
+++ b/_data/responsibilities.yml
@@ -6,10 +6,15 @@
   institution: LIPN
   period: "2021 - current"
 
-- title: Board Member
-  institution: Galilée Doctoral School
-  period: "2021 - current"
+- title: Member
+  institution: Collège Codes Sources et Logiciels
+  period: "2024 - current"
+
 
 - title: Ambassador
   institution: Software Heritage
+  period: "2021 - current"
+
+- title: Board Member
+  institution: Galilée Doctoral School
   period: "2021 - current"
