--- a/_data/social.yml
+++ b/_data/social.yml
@@ -27,9 +27,9 @@
   icon: "fa-brands fa-mastodon"
 
 - name: "twitter"
-  url: "http://twitter.com/himiteins"
+  url: "https://x.com/himiteins"
   icon: "fa-brands fa-twitter"
 
 - name: "linkedin"
-  url: "https://www.linkedin.com/in/jaime-arias-almeida-2a24182a0"
+  url: "www.linkedin.com/in/jaimeariasalmeida"
   icon: "fa-brands fa-linkedin-in"
