--- a/_data/social.yml
+++ b/_data/social.yml
@@ -31,5 +31,5 @@
   icon: "fa-brands fa-twitter"
 
 - name: "linkedin"
-  url: "www.linkedin.com/in/jaimeariasalmeida"
+  url: "https://www.linkedin.com/in/jaimeariasalmeida"
   icon: "fa-brands fa-linkedin-in"
