--- a/_data/service.yml
+++ b/_data/service.yml
@@ -3,92 +3,119 @@
     - title: Journée Modèles Formels pour les réseaux sociaux
       acronym: Promueva
       year: 2023
+      url: https://sites.google.com/view/promueva/actividades?authuser=0#h.6km12agjb07t
     - title: 9th International Workshop on Synthesis of Complex Parameters
       acronym: SynCoP2024
       year: 2024
+      url: https://sites.lipn.univ-paris13.fr/workshops/syncop24
 - title: "Programme Committee Member"
   events:
     - title: 24th International Conference on Autonomous Agents and Multi-Agent Systems)
       acronym: AAMAS2025
       year: 2025
+      url: https://aamas2025.org/
     - title: 23rd International Conference on Autonomous Agents and Multi-Agent Systems)
       acronym: AAMAS2024
       year: 2024
+      url: https://www.aamas2024-conference.auckland.ac.nz/organization/program-committee-members/
     - title: Latin American Symposium on Theory of Computation
       acronym: SLTC2022
+      url: https://clei2022.uniquindio.edu.co/clei2022/publicaciones/1200/simposios/
       year: 2022
     - title: International Conference on Microservices 2022
       acronym: Microservices2022
+      url: https://www.conf-micro.services/2022/committees/
       year: 2022
     - title: 15 Congreso Colombiano de Computación
       acronym: 15CCC
+      url: https://sco2.org/15-congreso-colombiano-de-computacion-ccc/
       year: 2021
     - title: 18th Linux Audio Conference
       acronym: LAC2020
       year: 2020
+      url: https://lac2020.sciencesconf.org/resource/page/id/2.html
 
 - title: "Artifact Evaluation Committee Member"
   events:
     - title: The Art, Science, and Engineering of Programming
       acronym: Programming
       year: 2025
+      url: https://programming-journal.org/artifact-evaluation/
     - title:
       acronym: POPL2025
       year: 2025
+      url: https://popl25.sigplan.org/track/POPL-2025-artifact-evaluation
     - title: International Conference on Formal Methods in Software Engineering
       acronym: FormaliSE2024
       year: 2024
+      url: https://conf.researchr.org/committee/Formalise-2024/Formalise-2024-papers-artifact-evaluation-committee
     - title: ACM SIGPLAN International Conference on Object-Oriented Programming Systems, Languages, and Application
       acronym: OOPSLA2024
       year: 2024
+      url: https://2024.splashcon.org/committee/splash-2024-oopsla-artifacts-artifact-evaluation-committee
     - title: 51st ACM SIGPLAN Symposium on Principles of Programming Languages
       acronym: POPL2024
       year: 2024
+      url: https://popl24.sigplan.org/committee/POPL-2024-artifact-evaluation-committee
     - title: 28th ACM SIGPLAN International Conference on Functional Programming
       acronym: ICFP2023
       year: 2023
+      url: https://icfp23.sigplan.org/committee/icfp-2023-artifact-evaluation-artifact-evaluation-committee
     - title: International Conference on Formal Modeling and Analysis of Timed Systems
       acronym: FORMATS2023
       year: 2023
+      url: https://www.uantwerpen.be/en/conferences/confest-2023/formats/
     - title: International Conference on Formal Methods in Software Engineering
       acronym: FormaliSE2023
       year: 2023
+      url: https://conf.researchr.org/committee/Formalise-2023/Formalise-2023-papers-artifact-evaluation-committee
     - title: 50th ACM SIGPLAN Symposium on Principles of Programming Languages
       acronym: POPL2023
       year: 2023
+      url: https://popl23.sigplan.org/committee/POPL-2023-artifact-evaluation-artifact-evaluation-committee
     - title: 27th ACM SIGPLAN International Conference on Functional Programming
       acronym: ICFP2022
       year: 2022
+      url: https://icfp22.sigplan.org/committee/icfp-2022-artifact-evaluation-evaluators
     - title: International Conference on Formal Methods in Software Engineering
       acronym: FormaliSE2022
       year: 2022
+      url: https://conf.researchr.org/home/icse-2022/Formalise-2022#Call-for-Papers
 
 - title: "Reviewer"
   events:
     - title: 25th International Symposium on Principles and Practice of Declarative Programming
       acronym: PPDP2023
       year: 2023
+      url: https://ppdp2023.webs.upv.es/
     - title: 19th Annual Scientific Computing with Python conference
       acronym: SciPy2020
       year: 2020
+      url: https://www.scipy2020.scipy.org/
     - title: 18th Annual Scientific Computing with Python conference
       acronym: SciPy2019
       year: 2019
+      url: https://www.scipy2019.scipy.org/
     - title: 17th Annual Scientific Computing with Python conference
       acronym: SciPy2018
       year: 2018
+      url: https://scipy2018.scipy.org/
     - title: 15th International Colloquium on Theoretical Aspects of Computing
       acronym: ICTAC2018
       year: 2018
+      url: https://www.ictac.org.za/
     - title: 13th Latin American Theoretical INformatics Symposium
       acronym: LATIN2018
       year: 2018
+      url: https://latin2018.dc.uba.ar/#
     - title: 16th Annual Scientific Computing with Python conference
       acronym: SciPy2017
       year: 2017
+      url: https://scipy2017.scipy.org/
     - title: 9th Conference on Interdisciplinary Musicology
       acronym: CIM14
       year: 2014
+      url: http://www.sim.spk-berlin.de/cim14
 # - title: "Best Tool Award Committee Member"
 #   events:
 #     - title: 42nd International Conference on Application and Theory of Petri Nets and Concurrency
