--- a/_data/service.yml
+++ b/_data/service.yml
@@ -10,6 +10,10 @@
       url: https://sites.lipn.univ-paris13.fr/workshops/syncop24
 - title: "Programme Committee Member"
   events:
+    - title: 34th International Joint Conference on Artificial Intelligence
+      acronym: IJCAI2025
+      year: 2015
+      url: https://2025.ijcai.org/
     - title: 24th International Conference on Autonomous Agents and Multi-Agent Systems)
       acronym: AAMAS2025
       year: 2025
