--- a/_data/responsibilities.yml
+++ b/_data/responsibilities.yml
@@ -6,7 +6,7 @@
   institution: LIPN
   period: "2021 - current"
 
-- title: Member
+- title: Member (GT3)
   institution: Collège Codes Sources et Logiciels
   period: "2024 - current"
 
