--- a/_data/service.yml
+++ b/_data/service.yml
@@ -10,6 +10,10 @@
       url: https://sites.lipn.univ-paris13.fr/workshops/syncop24
 - title: "Programme Committee Member"
   events:
+    - title: 28th European Conference on Artificial Intelligence
+      acronym: ECAI2025
+      year: 2025
+      url: https://ecai2025.org/
     - title: 34th International Joint Conference on Artificial Intelligence
       acronym: IJCAI2025
       year: 2025
