add new position

--- a/_data/responsibilities.yml
+++ b/_data/responsibilities.yml
@@ -1,3 +1,11 @@
+- title: Chargé de Mission (Logiciels)
+  institution: CNRS Sciences Informatiques
+  period: "2025 - current"
+
+- title: Member (GT3)
+  institution: Collège Codes Sources et Logiciels
+  period: "2024 - current"
+
 - title: Head of the Software Committee
   institution: LIPN
   period: "2023 - current"
@@ -5,11 +13,6 @@
 - title: Head of the Development Team
   institution: LIPN
   period: "2021 - current"
-
-- title: Member (GT3)
-  institution: Collège Codes Sources et Logiciels
-  period: "2024 - current"
-
 
 - title: Ambassador
   institution: Software Heritage
