--- a/_data/software.yml
+++ b/_data/software.yml
@@ -1,3 +1,8 @@
+- title: Morfetik
+  url: https://tal.lipn.univ-paris13.fr/morfetik2
+  status: current
+  description: |
+    Ressource lexicale morphologique extensible et modulaire pour le français
 - title: ADT2AMAS
   url: https://sites.lipn.univ-paris13.fr/websites/adt2amas
   status: current
